Reorganised GUI. Added config reading

--- a/config.ini
+++ b/config.ini
@@ -1,16 +1,10 @@
 ; Config file for notepad--
 [Basic]
-Autosafe=5
+BlocksCount=5
 Separator=;
 
 [Keys]
-Key1=F5
-Key2=F6
-Key3=F7
-Key4=F8
-
-[KeyValues]
-Key1=Status
-Key2=Comment:
-Key3=Behavior 
-Key4=Hypothesis
+F5=Status
+F6=Comment:
+F7=Behavior 
+F8=Hypothesis
