Feature: Add using of basic configuration options #6

--- a/source/config.ini
+++ b/source/config.ini
@@ -1,10 +1,17 @@
 ; Config file for notepad--
 [Basic]
-BlocksCount=5
+BlocksCounts=1
 Separator=;
+FontName=Ebrima
+FontSize=12
+FontWeight=400
+FontAttribute=0
 
 [Keys]
-F5=Status
-F6=Comment:
-F7=Behavior 
-F8=Hypothesis
+F5=Comment
+F6=GUI_RU
+F7=External
+F8=Assumption
+
+[External]
+cmd=ipconfig /all
