--- a/source/config.ini
+++ b/source/config.ini
@@ -1,10 +1,11 @@
 ; Config file for notepad--
 [Basic]
+TimeOffset=0
 BlocksCounts=1
 Separator=;
 FontName=Ebrima
-FontSize=12
-FontWeight=400
+FontSize=11
+FontWeight=100
 FontAttribute=0
 
 [Keys]
