Changed in the logic of how the insert works, instead of adding now APPEND

--- a/source/config.ini
+++ b/source/config.ini
@@ -10,10 +10,7 @@ FontWeight=100
 FontAttribute=0
 
 [Keys]
-F5=Comment
-F6=GUI_RU
-F7=External
-F8=Assumption
-
-[External]
-cmd=ipconfig /all
+F5=Behavior
+F6=Understanding
+F7=Error
+F8=Hypothesis
