Feature: Launching external programs #11

--- a/source/config.ini
+++ b/source/config.ini
@@ -9,8 +9,12 @@ FontSize=11
 FontWeight=100
 FontAttribute=0
 
+[Execute]
+cmd=ipconfig /all
+notepad=notepad.exe
+
 [Keys]
-F5=Behavior
-F6=Understanding
-F7=Error
-F8=Hypothesis
+F5=&Behavior
+F6=&Understanding
+F7=&Error
+F8=&Hypothesis
