Feature: Add relative time (RT) #16

--- a/source/config.ini
+++ b/source/config.ini
@@ -2,7 +2,7 @@
 [Basic]
 IsIntro=True
 TimeOffset=0
-BlocksCounts=1
+TimerReset=False
 Separator=;
 FontName=Ebrima
 FontSize=11
@@ -14,7 +14,7 @@ cmd=ipconfig /all
 notepad=notepad.exe
 
 [Keys]
-F5=&Behavior
-F6=&Understanding
-F7=&Error
-F8=&Hypothesis
+F5=Behavior
+F6=Understanding
+F7=Error
+F8=Hypothesis
