Feature: Launching external programs #11

--- a/source/config.ini
+++ b/source/config.ini
@@ -9,9 +9,13 @@ FontSize=11
 FontWeight=100
 FontAttribute=0
 
-[Execute]
+[Start]
 cmd=ipconfig /all
-notepad=notepad.exe
+app=notepad.exe
+
+[Stop]
+cmd=ping google.com
+cmd=taskkill /IM "notepad.exe" /F
 
 [Keys]
 F5=Behavior
