Launching external programs #11: fixed issue when application is launched with parameters

--- a/source/config.ini
+++ b/source/config.ini
@@ -12,6 +12,7 @@ FontAttribute=0
 [Start]
 cmd=ipconfig /all
 app=notepad.exe
+app=chrome.exe "linkedin.com" --incognito
 
 [Stop]
 cmd=ping google.com
